<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.me.cardgamefish.StartFragment"
    android:background="#b900d0a2">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:id="@+id/rules_start"
        android:layout_gravity="center"
        android:onClick="readRules"
        android:textColor="#000000"
        android:background="#ffc2c0c4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:id="@+id/quit_start"
        android:layout_gravity="right|center_vertical"
        android:onClick="quitGame"
        android:textColor="#000000"
        android:background="#ffc2c0c4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_game"
        android:id="@+id/start_start"
        android:layout_gravity="left|center_vertical"
        android:onClick="startGame"
        android:textColor="#000000"
        android:background="#ffc2c0c4" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left|top">

        <TextView android:layout_width="match_parent" android:layout_height="match_parent"
            android:text="@string/title"
            android:textSize="60dp"
            android:layout_gravity="left|top"
            android:textColor="#ff000000"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="52dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/authors"
            android:id="@+id/textView"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</FrameLayout>
